Add override to light background

--- a/projects/demo-app/src/scss/app-core.scss
+++ b/projects/demo-app/src/scss/app-core.scss
@@ -4,6 +4,7 @@
 
 // Material Overrides
 @import "./app-bar-override";
+@import "./background-override";
 @import "./typography-override";
 
 // External Libraries
