--- a/projects/demo-app/src/themes/candy-app-theme.scss
+++ b/projects/demo-app/src/themes/candy-app-theme.scss
@@ -5,6 +5,8 @@
 
   // Override for "app-bar"
   $theme: app-bar-override($theme);
+  // Override for "background"
+  $theme: background-override($theme);
 
   // Override for "typography"
   $typography: typography-override();
