Usar nomes em portugues

--- a/projects/demo-app/src/app/clientes/query-view/query-view.component.html
+++ b/projects/demo-app/src/app/clientes/query-view/query-view.component.html
@@ -1,2 +1,2 @@
-<tds-query-view title="Pesquisar" [table]="table" [filter]="filter">
+<tds-query-view titulo="Pesquisar" [tabela]="table" [filtro]="filter">
 </tds-query-view>
