--- a/projects/demo-app/src/app/usuarios/query-view/query-view.component.html
+++ b/projects/demo-app/src/app/usuarios/query-view/query-view.component.html
@@ -1,1 +1,1 @@
-<tds-query-view [table]="table" title="Usuários"></tds-query-view>
+<tds-query-view [tabela]="table" titulo="Usuários"></tds-query-view>
