--- a/projects/demo-app/src/app/funcionarios/query-view/query-view.component.html
+++ b/projects/demo-app/src/app/funcionarios/query-view/query-view.component.html
@@ -1,1 +1,1 @@
-<tds-query-view title="Funcionários" [table]="table" [filter]="filter" margin="1em" elevation="1"></tds-query-view>
+<tds-query-view titulo="Funcionários" [tabela]="table" [filtro]="filter" margem="1em" elevacao="1"></tds-query-view>
