--- a/projects/query-view/src/lib/query-view/query-view.component.html
+++ b/projects/query-view/src/lib/query-view/query-view.component.html
@@ -1,17 +1,17 @@
 <mat-drawer-container (backdropClick)="close()">
-    <mat-drawer *ngIf="filter" [mode]="mode" [opened]="filter$ | async" position="end" disableClose>
-        <tds-filter [filter]="filter"></tds-filter>
+    <mat-drawer *ngIf="filtro" [mode]="mode" [opened]="filter$ | async" position="end" disableClose>
+        <tds-filter [filter]="filtro"></tds-filter>
     </mat-drawer>
 
     <mat-drawer-content>
-        <tds-toolbar [style.margin]="margin" [titulo]="title" [ngClass]="getElevation()" [filter]="filter != null">
+        <tds-toolbar [style.margin]="margem" [titulo]="titulo" [ngClass]="getElevation()" [filter]="filtro != null">
         </tds-toolbar>
 
-        <mat-divider *ngIf="!margin"></mat-divider>
+        <mat-divider *ngIf="!margem"></mat-divider>
 
-        <div id="content-container" [style.margin]="margin" [style.margin-top]="0" [ngClass]="getElevation()">
+        <div id="content-container" [style.margin]="margem" [style.margin-top]="0" [ngClass]="getElevation()">
             <mat-progress-bar *ngIf="loading$ | async" mode="indeterminate"></mat-progress-bar>
-            <tds-table [table]="table"></tds-table>
+            <tds-table [table]="tabela"></tds-table>
         </div>
     </mat-drawer-content>
 </mat-drawer-container>
