Adicionar demo de paginacao

--- a/projects/demo-app/src/app/funcionarios/tabela-query-view/tabela-query-view.component.html
+++ b/projects/demo-app/src/app/funcionarios/tabela-query-view/tabela-query-view.component.html
@@ -1,4 +1,4 @@
 <ng-container *ngIf="dataSource$ | async as dataSource">
     <app-tabela [funcionarios]="dataSource.dados" [registros]="dataSource.registros" (ordenacao)="sort($event)"
-        (paginacao)="page($event)"></app-tabela>
+        (paginacao)="page($event)" [pageSize]="pageSize"></app-tabela>
 </ng-container>
