--- a/projects/demo-app/src/app/funcionarios/tabela/tabela.component.html
+++ b/projects/demo-app/src/app/funcionarios/tabela/tabela.component.html
@@ -42,4 +42,5 @@
     </table>
 </div>
 
-<mat-paginator [length]="registros" (page)="page($event)"></mat-paginator>
+<mat-paginator [pageSize]="pageSize" [length]="registros" (page)="page($event)" [pageSizeOptions]="[10,25,50]">
+</mat-paginator>
