--- a/projects/demo-app/src/app/usuarios/tabela/tabela.component.html
+++ b/projects/demo-app/src/app/usuarios/tabela/tabela.component.html
@@ -1,4 +1,4 @@
-<table mat-table [dataSource]="usuarios">
+<app-selection-table [dataSource]="usuarios" [columns]="displayedColumns" matSort (matSortChange)="sort($event)">
 
     <ng-container matColumnDef="id">
         <th mat-header-cell *matHeaderCellDef> id </th>
@@ -13,12 +13,12 @@
     </ng-container>
 
     <ng-container matColumnDef="username">
-        <th mat-header-cell *matHeaderCellDef> Username </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Username </th>
         <td mat-cell *matCellDef="let usuario"> {{usuario.username}} </td>
     </ng-container>
 
     <ng-container matColumnDef="email">
-        <th mat-header-cell *matHeaderCellDef> Email </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Email </th>
         <td mat-cell *matCellDef="let usuario"> {{usuario.email}} </td>
     </ng-container>
 
@@ -28,4 +28,4 @@
     <tr class="mat-row" *matNoDataRow>
         <td class="mat-cell" [attr.colspan]="displayedColumns.length + 1"> Nenhum usuário localizado </td>
     </tr>
-</table>
+</app-selection-table>
