--- a/projects/query-view/src/lib/toolbar/toolbar.component.html
+++ b/projects/query-view/src/lib/toolbar/toolbar.component.html
@@ -1,18 +1,28 @@
 <mat-toolbar>
 
-    <tds-search fxFlex [placeholder]="titulo"></tds-search>
+   <div class="wrapper">
+      <ng-content select="[tds-toolbar-selection]"></ng-content>
+   </div>
 
-    <button mat-icon-button matTooltip="Atualizar" (click)="refresh()">
-        <mat-icon>refresh</mat-icon>
-    </button>
+   <div class="default" fxFlex>
+      <div fxLayout>
+         <tds-search fxFlex [placeholder]="titulo"></tds-search>
 
-    <ng-container *ngIf="filter && filterBadge$ | async as filterBadge">
-        <button mat-icon-button matTooltip="Filtros" (click)="toggle()">
-            <mat-icon [matBadge]="filterBadge.numFilters" [matBadgeHidden]="filterBadge.hidden" matBadgeColor="accent"
-                matBadgeSize="small">
-                tune
-            </mat-icon>
-        </button>
-    </ng-container>
+         <ng-content select="[tds-toolbar-buttons]"></ng-content>
+
+         <button mat-icon-button matTooltip="Atualizar" (click)="refresh()">
+            <mat-icon>refresh</mat-icon>
+         </button>
+
+         <ng-container *ngIf="filter && filterBadge$ | async as filterBadge">
+            <button mat-icon-button matTooltip="Filtros" (click)="toggle()">
+               <mat-icon [matBadge]="filterBadge.numFilters" [matBadgeHidden]="filterBadge.hidden"
+                  matBadgeColor="accent" matBadgeSize="small">
+                  tune
+               </mat-icon>
+            </button>
+         </ng-container>
+      </div>
+   </div>
 
 </mat-toolbar>
