--- a/projects/demo-app/src/app/usuarios/query-view/query-view.component.html
+++ b/projects/demo-app/src/app/usuarios/query-view/query-view.component.html
@@ -1,4 +1,4 @@
-<tds-query-view [tabela]="table" titulo="Usuários">
+<tds-query-view [tabela]="table" titulo="Usuários" elevacao="1" margem="2em">
 
     <ng-container *ngIf="hasSelection" tds-toolbar-selection>
         <button mat-icon-button matTooltip="Bloquear" (click)="bloquear()">
