--- a/projects/demo-app/src/app/usuarios/tabela/tabela.component.html
+++ b/projects/demo-app/src/app/usuarios/tabela/tabela.component.html
@@ -1,31 +1,33 @@
-<app-selection-table [dataSource]="usuarios" [columns]="displayedColumns" matSort (matSortChange)="sort($event)">
+<div id="table-container">
+    <app-selection-table [dataSource]="usuarios" [columns]="displayedColumns" matSort (matSortChange)="sort($event)">
 
-    <ng-container matColumnDef="id">
-        <th mat-header-cell *matHeaderCellDef> id </th>
-        <td mat-cell *matCellDef="let usuario"> {{usuario.id}} </td>
-    </ng-container>
+        <ng-container matColumnDef="id">
+            <th mat-header-cell *matHeaderCellDef> id </th>
+            <td mat-cell *matCellDef="let usuario"> {{usuario.id}} </td>
+        </ng-container>
 
-    <ng-container matColumnDef="avatar">
-        <th mat-header-cell *matHeaderCellDef> Avatar </th>
-        <td mat-cell *matCellDef="let usuario">
-            <img [src]="usuario.avatar">
-        </td>
-    </ng-container>
+        <ng-container matColumnDef="avatar">
+            <th mat-header-cell *matHeaderCellDef> Avatar </th>
+            <td mat-cell *matCellDef="let usuario">
+                <img [src]="usuario.avatar">
+            </td>
+        </ng-container>
 
-    <ng-container matColumnDef="username">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Username </th>
-        <td mat-cell *matCellDef="let usuario"> {{usuario.username}} </td>
-    </ng-container>
+        <ng-container matColumnDef="username">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Username </th>
+            <td mat-cell *matCellDef="let usuario"> {{usuario.username}} </td>
+        </ng-container>
 
-    <ng-container matColumnDef="email">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Email </th>
-        <td mat-cell *matCellDef="let usuario"> {{usuario.email}} </td>
-    </ng-container>
+        <ng-container matColumnDef="email">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Email </th>
+            <td mat-cell *matCellDef="let usuario"> {{usuario.email}} </td>
+        </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+        <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
 
-    <tr class="mat-row" *matNoDataRow>
-        <td class="mat-cell" [attr.colspan]="displayedColumns.length + 1"> Nenhum usuário localizado </td>
-    </tr>
-</app-selection-table>
+        <tr class="mat-row" *matNoDataRow>
+            <td class="mat-cell" [attr.colspan]="displayedColumns.length + 1"> Nenhum usuário localizado </td>
+        </tr>
+    </app-selection-table>
+</div>
