--- a/projects/demo-app/src/app/usuarios/tabela/tabela.component.scss
+++ b/projects/demo-app/src/app/usuarios/tabela/tabela.component.scss
@@ -1,5 +1,11 @@
 :host {
-  display: block;
+  display: flex;
+  flex-direction: column;
+}
+
+#table-container {
+  flex: 1;
+  overflow: auto;
 }
 
 table {
