--- a/projects/query-view/src/lib/query-view/query-view.component.html
+++ b/projects/query-view/src/lib/query-view/query-view.component.html
@@ -5,7 +5,8 @@
 
     <mat-drawer-content>
 
-        <tds-toolbar [style.margin]="margem" [titulo]="titulo" [ngClass]="getElevation()" [filter]="filtro != null">
+        <tds-toolbar [style.margin]="margem" [titulo]="titulo" [ngClass]="getElevation()" [filter]="filtro != null"
+            [search]="search">
             <ng-container tds-toolbar-selection>
                 <ng-content select="[tds-toolbar-selection]"></ng-content>
             </ng-container>
