Add filter wrapper

--- a/projects/demo-app/src/app/funcionarios/filtro/filtro.component.html
+++ b/projects/demo-app/src/app/funcionarios/filtro/filtro.component.html
@@ -1,19 +1,8 @@
-<mat-toolbar>
-    Filtros
-</mat-toolbar>
+<app-filter-wrapper [form]="form" [fnSubmit]="transform">
 
-<mat-divider></mat-divider>
+    <form [formGroup]="form" fxLayout="column">
+        <h3>Idade Máxima</h3>
+        <mat-slider min="18" max="60" thumbLabel formControlName="idadeMax"></mat-slider>
+    </form>
 
-<form [formGroup]="form" fxLayout="column">
-    <h3>Idade Máxima</h3>
-    <mat-slider min="18" max="60" thumbLabel [formControl]="idadeMax"></mat-slider>
-    <div fxFlex></div>
-</form>
-
-<mat-divider></mat-divider>
-
-<mat-toolbar>
-    <button mat-button (click)="reiniciar()" [disabled]="form.pristine">
-        Reiniciar
-    </button>
-</mat-toolbar>
+</app-filter-wrapper>
