Resize filter based on container size

--- a/projects/demo-app/src/app/shared/filter-wrapper/filter-wrapper.component.html
+++ b/projects/demo-app/src/app/shared/filter-wrapper/filter-wrapper.component.html
@@ -23,7 +23,7 @@
 
     <div fxFlex></div>
 
-    <button mat-button color="primary" (click)="submit()">
+    <button *ngIf="filtro.fullscreen$ | async" mat-button color="primary" (click)="submit()">
         Filtrar
     </button>
 </div>
