Close filter after filtering in mobile

--- a/projects/demo-app/src/app/clientes/filtro/filtro.component.html
+++ b/projects/demo-app/src/app/clientes/filtro/filtro.component.html
@@ -1,12 +1,6 @@
-<mat-toolbar>
-    <h3>Refinamento</h3>
-</mat-toolbar>
+<app-filter-wrapper [form]="form" [fnSubmit]="transform" titulo="Refinamento">
 
-<mat-divider></mat-divider>
-
-<form [formGroup]="form" (ngSubmit)="submit()">
-
-    <div id="container" fxLayout="column">
+    <form [formGroup]="form" fxLayout="column">
 
         <mat-form-field fxFlex>
             <mat-label>País</mat-label>
@@ -38,21 +32,6 @@
             </mat-autocomplete>
         </mat-form-field>
 
-        <div fxFlex></div>
-    </div>
+    </form>
 
-    <mat-divider></mat-divider>
-
-    <div fxLayout id="button-container">
-        <button mat-button type="reset" (click)="reset()" [disabled]="form.pristine">
-            Reiniciar
-        </button>
-
-        <div fxFlex></div>
-
-        <button mat-button color="primary" (click)="submit()" type="submit">
-            Filtrar
-        </button>
-    </div>
-
-</form>
+</app-filter-wrapper>
