--- a/projects/demo-app/src/app/usuarios/tabela/tabela.component.html
+++ b/projects/demo-app/src/app/usuarios/tabela/tabela.component.html
@@ -28,7 +28,7 @@
 
         <!-- TODO: https://github.com/angular/components/issues/20560 -->
         <tr class="mat-row" *matNoDataRow>
-            <td class="mat-cell" [attr.colspan]="displayedColumns.length + 1"> Nenhum usuário localizado </td>
+            <td class="mat-cell" [attr.colspan]="displayedColumns.length"> Nenhum usuário localizado </td>
         </tr>
     </app-selection-table>
 </div>
