--- a/projects/query-view/src/lib/toolbar/toolbar.component.scss
+++ b/projects/query-view/src/lib/toolbar/toolbar.component.scss
@@ -6,6 +6,14 @@
   display: none;
 }
 
+.default {
+  width: 100%;
+}
+
+.wrapper:not(:empty) {
+  width: 100%;
+}
+
 #titulo {
   padding: 0 8px;
 }
