Update UI da selecao

--- a/projects/demo-app/src/app/usuarios/query-view/query-view.component.html
+++ b/projects/demo-app/src/app/usuarios/query-view/query-view.component.html
@@ -7,9 +7,9 @@
 
             <div fxFlex></div>
 
-            <span class="selection-text">
+            <button mat-button disabled>
                 {{ selection }} {{ selection === 1 ? 'selecionado' : 'selecionados' }}
-            </span>
+            </button>
 
         </div>
     </ng-container>
