--- a/projects/demo-app/src/themes/candy-app-theme.scss
+++ b/projects/demo-app/src/themes/candy-app-theme.scss
@@ -15,4 +15,6 @@
 
   @include tds-query-view-theme($theme);
   @include tds-query-view-typography($typography);
+
+  @include app-custom-classes($theme);
 }
