--- a/projects/demo-app/src/themes/dark-app-theme.scss
+++ b/projects/demo-app/src/themes/dark-app-theme.scss
@@ -1,7 +1,8 @@
 @mixin dark-app-theme() {
   $primary: mat-palette($mat-purple);
   $accent: mat-palette($mat-green, A200, A100, A400);
-  $theme: mat-dark-theme($primary, $accent);
+  $warn: mat-palette($mat-orange);
+  $theme: mat-dark-theme($primary, $accent, $warn);
 
   // Override for "app-bar"
   $theme: app-bar-override($theme);
@@ -13,4 +14,6 @@
 
   @include tds-query-view-theme($theme);
   @include tds-query-view-typography($typography);
+
+  @include app-custom-classes($theme);
 }
