--- a/projects/demo-app/src/app/funcionarios/tabela/tabela.component.html
+++ b/projects/demo-app/src/app/funcionarios/tabela/tabela.component.html
@@ -1,46 +1,65 @@
 <div id="table-container">
-    <table mat-table [dataSource]="funcionarios" matSort (matSortChange)="sort($event)">
+  <table
+    mat-table
+    [dataSource]="funcionarios"
+    matSort
+    (matSortChange)="sort($event)"
+  >
+    <ng-container matColumnDef="id">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Id</th>
+      <td mat-cell *matCellDef="let element">{{ element.id }}</td>
+    </ng-container>
 
-        <ng-container matColumnDef="id">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>Id</th>
-            <td mat-cell *matCellDef="let element">{{ element.id }}</td>
-        </ng-container>
+    <ng-container matColumnDef="nome">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Nome</th>
+      <td mat-cell *matCellDef="let element">{{ element.nome }}</td>
+    </ng-container>
 
-        <ng-container matColumnDef="nome">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>Nome</th>
-            <td mat-cell *matCellDef="let element">{{ element.nome }}</td>
-        </ng-container>
+    <ng-container matColumnDef="sobrenome">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Sobrenome</th>
+      <td mat-cell *matCellDef="let element">{{ element.sobrenome }}</td>
+    </ng-container>
 
-        <ng-container matColumnDef="sobrenome">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>Sobrenome</th>
-            <td mat-cell *matCellDef="let element">{{ element.sobrenome }}</td>
-        </ng-container>
+    <ng-container matColumnDef="idade">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Idade</th>
+      <td
+        mat-cell
+        *matCellDef="let element"
+        [ngStyle]="{ color: setColor(element.idade) }"
+      >
+        <span class="idade">{{ element.idade }}</span>
+      </td>
+    </ng-container>
 
-        <ng-container matColumnDef="idade">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>Idade</th>
-            <td mat-cell *matCellDef="let element" [ngStyle]="{ color: setColor(element.idade) }">
-                <span class="idade">{{ element.idade }}</span>
-            </td>
-        </ng-container>
+    <ng-container matColumnDef="empresa">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Empresa</th>
+      <td mat-cell *matCellDef="let element">{{ element.empresa }}</td>
+    </ng-container>
 
-        <ng-container matColumnDef="empresa">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>Empresa</th>
-            <td mat-cell *matCellDef="let element">{{ element.empresa }}</td>
-        </ng-container>
+    <ng-container matColumnDef="email">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Email</th>
+      <td mat-cell *matCellDef="let element">{{ element.email }}</td>
+    </ng-container>
 
-        <ng-container matColumnDef="email">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>Email</th>
-            <td mat-cell *matCellDef="let element">{{ element.email }}</td>
-        </ng-container>
+    <tr mat-header-row *matHeaderRowDef="colunas; sticky: true"></tr>
+    <tr mat-row *matRowDef="let row; columns: colunas"></tr>
 
-        <tr mat-header-row *matHeaderRowDef="colunas; sticky: true"></tr>
-        <tr mat-row *matRowDef="let row; columns: colunas"></tr>
+    <tr class="mat-row" *matNoDataRow>
+      <td class="mat-cell" [attr.colspan]="colunas.length + 1">
+        <span *ngIf="erro; else semRegistro" class="color-warn">
+          {{ erro }}
+        </span>
 
-        <tr class="mat-row" *matNoDataRow>
-            <td class="mat-cell" [attr.colspan]="colunas.length + 1"> Nenhum funcionário localizado </td>
-        </tr>
-    </table>
+        <ng-template #semRegistro> Nenhum funcionário localizado </ng-template>
+      </td>
+    </tr>
+  </table>
 </div>
 
-<mat-paginator [pageSize]="pageSize" [length]="registros" (page)="page($event)" [pageSizeOptions]="[10,25,50]">
+<mat-paginator
+  [pageSize]="pageSize"
+  [length]="registros"
+  (page)="page($event)"
+  [pageSizeOptions]="[10, 25, 50]"
+>
 </mat-paginator>
