Possibilitar diversos tipos de erros

--- a/projects/demo-app/src/app/funcionarios/tabela-query-view/tabela-query-view.component.html
+++ b/projects/demo-app/src/app/funcionarios/tabela-query-view/tabela-query-view.component.html
@@ -5,6 +5,6 @@
     (ordenacao)="sort($event)"
     (paginacao)="page($event)"
     [pageSize]="pageSize"
-    [erro]="dataSource?.erro?.statusText"
+    [erro]="dataSource?.erro"
   ></app-tabela>
 </ng-container>
