--- a/projects/demo-app/src/scss/app-core.scss
+++ b/projects/demo-app/src/scss/app-core.scss
@@ -1,6 +1,6 @@
+@use '~@angular/material' as mat;
 // Default Angular Material
-@import "~@angular/material/theming";
-@include mat-core();
+@include mat.core();
 
 // Material Overrides
 @import "./app-bar-override";
