--- a/projects/demo-app/src/themes/candy-app-theme.scss
+++ b/projects/demo-app/src/themes/candy-app-theme.scss
@@ -1,7 +1,8 @@
+@use '~@angular/material' as mat;
 @mixin default-app-theme() {
-  $primary: mat-palette($mat-indigo);
-  $accent: mat-palette($mat-pink, A200, A100, A400);
-  $theme: mat-light-theme($primary, $accent);
+  $primary: mat.define-palette(mat.$indigo-palette);
+  $accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+  $theme: mat.define-light-theme($primary, $accent);
 
   // Override for "app-bar"
   $theme: app-bar-override($theme);
@@ -10,8 +11,8 @@
   // Override for "typography"
   $typography: typography-override();
 
-  @include angular-material-theme($theme);
-  @include angular-material-typography($typography);
+  @include mat.all-component-themes($theme);
+  @include mat.all-component-typographies($typography);
 
   @include tds-query-view-theme($theme);
   @include tds-query-view-typography($typography);
