--- a/projects/demo-app/src/themes/dark-app-theme.scss
+++ b/projects/demo-app/src/themes/dark-app-theme.scss
@@ -1,16 +1,17 @@
+@use '~@angular/material' as mat;
 @mixin dark-app-theme() {
-  $primary: mat-palette($mat-purple);
-  $accent: mat-palette($mat-green, A200, A100, A400);
-  $warn: mat-palette($mat-orange);
-  $theme: mat-dark-theme($primary, $accent, $warn);
+  $primary: mat.define-palette(mat.$purple-palette);
+  $accent: mat.define-palette(mat.$green-palette, A200, A100, A400);
+  $warn: mat.define-palette(mat.$orange-palette);
+  $theme: mat.define-dark-theme($primary, $accent, $warn);
 
   // Override for "app-bar"
   $theme: app-bar-override($theme);
   // Override for "typography"
   $typography: typography-override();
 
-  @include angular-material-theme($theme);
-  @include angular-material-typography($typography);
+  @include mat.all-component-themes($theme);
+  @include mat.all-component-typographies($typography);
 
   @include tds-query-view-theme($theme);
   @include tds-query-view-typography($typography);
